templates/imagehub/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: imagehub-api
spec:
  hosts:
  - "imagehub.meshery.io"
  gateways:
  - sample-app-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    - uri:
        prefix: /pull
    - uri:
        prefix: /signup
    - uri:
        prefix: /upgrade
    route:
    - destination:
        host: api
        port:
          number: 9091
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: imagehub-web
spec:
  hosts:
  - "imagehub.meshery.io"
  gateways:
  - sample-app-gateway
  http:
  - route:
    - destination:
        host: web
        port:
          number: 8080
