templates/imagehub/rate_limit_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: imagehub-filter
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND # will match inbound listeners in all sidecars
      proxy:
        proxyVersion: '^1\.9.*'
      listener:
        portNumber: 9091
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filter.http.wasm
        typed_config:
          "@type": type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: "rate_limit_filter"
              root_id: "rate_limit_filter"
              vmConfig:
                code:
                  local:
                    filename: "/var/lib/imagehub/filter.wasm"
                runtime: envoy.wasm.runtime.v8
                vmId: rate_limit_filter
                allow_precompiled: true
  workloadSelector:
    labels:
      app: api
      version: v1
